<resources>
    <string name="app_name">Lab02c2016</string>

    <!-- String de Etiquetas -->
    <string name="Titulo">Pedite La Cena!!!</string>
    <string name="tvSeleccionHorario">Seleccione el horario</string>
    <string name="tvNotificarReserva">Notificar Reserva 1 hora antes</string>
    
    <string name="rbtPlato"> Plato </string>
    <string name="rbtPostre"> Postre </string>
    <string name="rbtBebida"> Bebida </string>


    <!--String de Botones-->
    <string name="btnDeliveryEstado1">DELIVERY</string>
    <string name="btnDeliveryEstado2">RESERVAR MESA</string>
    <string name="btnAgregar">AGREGAR</string>
    <string name="btnConfirmar">CONFIRMAR PEDIDO</string>
    <string name="btnReiniciar">REINICIAR</string>








</resources>
