<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.pharmacy.martin.lab02c2016.MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Titulo"
        android:id="@+id/tvTitulo"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold"
        android:textColor="#000000" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnDeliveryEstado1"
        android:id="@+id/btnDelivery"
        android:checked="false"
        android:textOff="@string/btnDeliveryEstado2"
        android:textOn="@string/btnDeliveryEstado1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/tvSeleccionHorario"
        android:id="@+id/tvSeleccionHorario" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spnrHorarios" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvNotificarReserva"
            android:id="@+id/tvNotificarReserva"/>
        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Datos del Pedido"
        android:minLines="1"
        android:maxLines="5"
        android:id="@+id/tvDatosPedido" />

    <RadioGroup

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radGrp"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbtPlato"
            android:tag="@string/rbtPlato"
            android:id="@+id/rbtPlato"
            android:layout_gravity="right" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbtPostre"
            android:tag="@string/rbtPostre"
            android:id="@+id/rbtPostre"
            android:layout_gravity="center_horizontal" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbtBebida"
            android:tag="@string/rbtBebida"
            android:id="@+id/rbtBebida" />
    </RadioGroup>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btnAgregar"
            android:id="@+id/btnAgregar"
            android:textSize="14dp"
            android:layout_gravity="left"
            android:layout_weight="1" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btnConfirmar"
            android:id="@+id/btnConfirmar"
            android:textSize="14dp"
            android:layout_gravity="center"
            android:layout_weight="1.7" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btnReiniciar"
            android:id="@+id/btnReiniciar"
            android:textSize="14dp"
            android:layout_gravity="right"
            android:layout_weight="1" />
    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lvCarta" />


</LinearLayout>
